syntax = "proto3";

import "aelf/core.proto";
import "aelf/options.proto";
import "google/protobuf/empty.proto";
import "acs1.proto";
import "acs3.proto";

option csharp_namespace = "AElf.Contracts.LotteryDemoContract";

service LotteryDemoContract {
    option (aelf.csharp_state) = "AElf.Contracts.LotteryDemoContract.LotteryDemoContractState";
    option (aelf.base) = "acs1.proto";

    rpc Initialize (InitializeInput) returns (google.protobuf.Empty) {
    }
    rpc Buy(aelf.SInt32Value) returns (BoughtLotteriesInformation) {
    }
    rpc Draw (DrawInput) returns (google.protobuf.Empty) {
    }
    rpc PrepareDraw (google.protobuf.Empty) returns (google.protobuf.Empty) {
	}
    rpc TakeReward (TakeRewardInput) returns (google.protobuf.Empty) {
    }
    rpc GetRewardResult (google.protobuf.UInt64Value) returns (GetRewardResultOutput) {
        option (aelf.is_view) = true;
    }
    rpc GetBoughtLotteries (GetBoughtLotteriesInput) returns (GetBoughtLotteriesOutput) {
        option (aelf.is_view) = true;
	}
}

message InitializeInput {
    string token_symbol = 1;
    sint32 maximum_amount = 2;
    sint64 price = 3;
    sint64 drawing_lag = 4;
}

message BoughtLotteriesInformation {
    uint64 start_id = 1;
    sint32 amount = 2;
}

message TakeRewardInput {
    uint64 lottery_id = 1;
    string registration_information = 2;
    uint64 period = 3;
}

message DrawInput {
    repeated uint64 levels_count = 1;
}

message Lottery {
    uint64 id = 1;
    aelf.Address owner = 2;
    uint64 level = 3;
    sint64 block = 4;
    string registration_information = 5;
}

message PeriodBody {
    sint64 block_number = 2;
    aelf.Hash random_hash = 3;
    repeated uint64 reward_ids = 4;
    uint64 start_id = 5;
}

message LotteryList {
    repeated uint64 ids = 1;
}

message GetRewardResultInput {
    uint64 period = 1;
}

message GetRewardResultOutput {
    uint64 period = 1;
    aelf.Hash random_hash = 2;
    repeated Lottery reward_lotteries = 3;
}

message GetBoughtLotteriesInput {
    uint64 period = 1;
    sint32 start_index = 2;
    aelf.Address owner = 3;
}

message GetBoughtLotteriesOutput {
    repeated Lottery lotteries = 3;
}